syntax = "proto3";

package scuffle.video.internal.events;

import "scuffle/types/ulid.proto";

message TranscoderRequestTask {
  scuffle.types.Ulid organization_id = 1;
  scuffle.types.Ulid room_id = 2;
  scuffle.types.Ulid connection_id = 3;
  scuffle.types.Ulid request_id = 4;
  string grpc_endpoint = 5;
}
